Intel UHD 620: Blender crashes at modifying material properties #77346
Closed
opened 2020-06-04 07:31:58 +02:00 by (Deleted)
·
59 comments
No Branch/Tag Specified
tmp-usd-python-mtl
main
blender-v3.6-release
temp-sculpt-dyntopo
asset-browser-frontend-split
temp-sculpt-dyntopo-hive-alloc
node-group-operators
brush-assets-project
asset-shelf
blender-v2.93-release
blender-v3.3-release
universal-scene-description
temp-sculpt-attr-api
blender-v3.5-release
realtime-clock
sculpt-dev
gpencil-next
bevelv2
microfacet_hair
blender-projects-basics
principled-v2
v3.3.7
v2.93.18
v3.5.1
v3.3.6
v2.93.17
v3.5.0
v2.93.16
v3.3.5
v3.3.4
v2.93.15
v2.93.14
v3.3.3
v2.93.13
v2.93.12
v3.4.1
v3.3.2
v3.4.0
v3.3.1
v2.93.11
v3.3.0
v3.2.2
v2.93.10
v3.2.1
v3.2.0
v2.83.20
v2.93.9
v3.1.2
v3.1.1
v3.1.0
v2.83.19
v2.93.8
v3.0.1
v2.93.7
v3.0.0
v2.93.6
v2.93.5
v2.83.18
v2.93.4
v2.93.3
v2.83.17
v2.93.2
v2.93.1
v2.83.16
v2.93.0
v2.83.15
v2.83.14
v2.83.13
v2.92.0
v2.83.12
v2.91.2
v2.83.10
v2.91.0
v2.83.9
v2.83.8
v2.83.7
v2.90.1
v2.83.6.1
v2.83.6
v2.90.0
v2.83.5
v2.83.4
v2.83.3
v2.83.2
v2.83.1
v2.83
v2.82a
v2.82
v2.81a
v2.81
v2.80
v2.80-rc3
v2.80-rc2
v2.80-rc1
v2.79b
v2.79a
v2.79
v2.79-rc2
v2.79-rc1
v2.78c
v2.78b
v2.78a
v2.78
v2.78-rc2
v2.78-rc1
v2.77a
v2.77
v2.77-rc2
v2.77-rc1
v2.76b
v2.76a
v2.76
v2.76-rc3
v2.76-rc2
v2.76-rc1
v2.75a
v2.75
v2.75-rc2
v2.75-rc1
v2.74
v2.74-rc4
v2.74-rc3
v2.74-rc2
v2.74-rc1
v2.73a
v2.73
v2.73-rc1
v2.72b
2.72b
v2.72a
v2.72
v2.72-rc1
v2.71
v2.71-rc2
v2.71-rc1
v2.70a
v2.70
v2.70-rc2
v2.70-rc
v2.69
v2.68a
v2.68
v2.67b
v2.67a
v2.67
v2.66a
v2.66
v2.65a
v2.65
v2.64a
v2.64
v2.63a
v2.63
v2.61
v2.60a
v2.60
v2.59
v2.58a
v2.58
v2.57b
v2.57a
v2.57
v2.56a
v2.56
v2.55
v2.54
v2.53
v2.52
v2.51
v2.50
v2.49b
v2.49a
v2.49
v2.48a
v2.48
v2.47
v2.46
v2.45
v2.44
v2.43
v2.42a
v2.42
v2.41
v2.40
v2.37a
v2.37
v2.36
v2.35a
v2.35
v2.34
v2.33a
v2.33
v2.32
v2.31a
v2.31
v2.30
v2.28c
v2.28a
v2.28
v2.27
v2.26
v2.25
Labels
Clear labels
Issues relating to security: https://wiki.blender.org/wiki/Process/Vulnerability_Reports
Apply labels
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
Eevee & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest/Import
Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Issues relating to security: https://wiki.blender.org/wiki/Process/Vulnerability_Reports
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Eevee & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
Eevee & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest/Import
Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Eevee & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
Milestone
Set milestone
Clear milestone
No items
No Milestone
Projects
Set Project
Clear projects
No project
Assignees
Assign users
Clear assignees
No Assignees
12 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#77346
Reference in New Issue
There is no content yet.
Delete Branch "%!s(<nil>)"
Deleting a branch is permanent. Although the deleted branch may exist for a short time before cleaning up, in most cases it CANNOT be undone. Continue?
System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: Intel(R) UHD Graphics 620 Intel 4.5.0 - Build 26.20.100.6859
Also 27.20.100.8280
Blender Version
Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-06-03 18:45, hash:
b94ab93dfb
Worked: version: 2.83
Short description of error
After opening blender with default general template, tried changing the base color of material and blender crashes.
blender_system_info.txt, {F8640691, layout = inline}
blender_debug_output.txt
blender.crash.txt
Exact steps for others to reproduce the error
most likely 2nd time change is causing blender crash.
after crash reopen blender and this time it crashes even if we just click on base color field.
Added subscriber: @(Deleted)
#78889 was marked as duplicate of this issue
#78817 was marked as duplicate of this issue
#78458 was marked as duplicate of this issue
#78095 was marked as duplicate of this issue
#78344 was marked as duplicate of this issue
#78212 was marked as duplicate of this issue
#77748 was marked as duplicate of this issue
#78196 was marked as duplicate of this issue
Added subscriber: @Alaska
Changed status from 'Needs Triage' to: 'Needs User Info'
The recent builds of 2.90.0 have been quite unstable based on my personal experience. However, I'm unable to reproduce this issue on Linux with a GTX 1050Ti.
I was able to reproduce this on a computer I was using earlier today with Intel UHD Graphics 630 on Windows 10. But I won't have access to this computer for another 20 or so hours, so I can't confirm this case.
Are you able to try to things:
blender_debug_log.cmd
then get Blender to crash. A file explorer should open with two text files, upload those two files to here.This issue may have been fixed in recent commits to master. Are you able to test with the latest Blender 2.90.0 build? http://builder.blender.org/
Today I checked using latest build but still the problem remains. My drivers are up to date. last week it was fine but suddenly this problem popped up.
I have checked changing color in grease pencil and there it works fine.
here attached debug logs.
blender_system_info.txt
blender_debug_output.txt
Changed status from 'Needs User Info' to: 'Needs Developer To Reproduce'
I don't really know where to progress from here. Will need the developers to investigate.
Added subscriber: @mano-wii
Changed status from 'Needs Developer To Reproduce' to: 'Needs User Info'
@pattamp, you forgot to include information about a version of Blender that works.
Did you try 2.83 or 2.82?
yes I have used 2.83 and its working fine without any issue.
Changed status from 'Needs User Info' to: 'Needs Developer To Reproduce'
Added subscriber: @iss
@pattamp Could you re-trigger bug and upload
crash.txt
file mentioned at the end ofblender_debug_output.txt
?Should be
C:\Users\xx\AppData\Local\Temp\blender.crash.txt
in your case.Added subscriber: @ankitm
https://downloadcenter.intel.com/download/29616/Intel-Graphics-Windows-10-DCH-Drivers?product=126789
This page says that latest drivers are 27.x, not 23.x
Changed status from 'Needs Developer To Reproduce' to: 'Needs User Info'
I have tried installing this version 27.x but it is not validated for my system

my current driver version is updated to

attached crash report
blender.crash.txt
BTW earlier attached blender_system_info.txt file already shows ver 26.x for driver.
Ver 23 was when i first noticed the crash, later updated the driver to ver 26 and still had the crash.
Changed status from 'Needs User Info' to: 'Needs Developer To Reproduce'
Added subscribers: @Binafa, @grosgood
Added subscribers: @raindrops, @lichtwerk, @JacquesLucke
Blender crash when trying to change base color of materialto Intel UHD 620: Blender crashes at modifying material propertiesAdded subscribers: @nerjal, @HooglyBoogly
Added subscriber: @EAW
For Intel drivers on Windows, only pay attention to the last 4 digits.
https://www.intel.com/content/www/us/en/support/articles/000005654/graphics.html
Added subscriber: @xxxdakevingame
Added subscriber: @Quesbe
Added subscriber: @Jeroen-Bakker
I was able to reproduce this one. Strange enough you don't need to have EEVEE active.
system-info.txt
Will check tomorrow with latest Intel Driver and debug builds
Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'
Added subscriber: @mikon117
I confirm on mac (macbook pro 13 "2019) I am using version 2.83.1 and it is truly a disaster, the 2.82 was much better in terms of stability. The program crashes even in the transition from solid mode to material preview. times I don't understand why they are much longer and even in the transition from uv editing to shading the program crashes. Obviously I'm talking about light files that normally in my pc have never given problems.
During the rendering of the material preview it crashes. The GLSL shader must be in compiled state, but is in queued state.
Issue is related to a work around that we added for this specific configuration.
GG.context_local_shaders_workaround
. The work around would always use the main thread for loading shaders. When doing preview renders the compilation happens in the caller thread, but is stored in a binary. This binary is loaded as a shader when the caller is part of the main thread.Due to recent refactorings it is assumed that the caller always returns a valid shader so its interface can be introspected, what isn't the case.
I tested by disabling the workaround and it seems to be working (perhaps it got fixed in the driver in the mean time). But as the work around is also activated for other IGPUs on Windows it is hard to say that all platforms are currently working.
Regression introduced by {b18c2a3c413b7741b2a854b7bd25721352be2589}
@fclem: any advice how to fix this? Issue is that the shaders are needed for the interface, but the shader is stored in binary form. and the default shader is loaded, which also is loaded in binary form. Issue can be reproduced by
Added subscriber: @fclem
We could change that workarround to simply compile the shaders in single thread.
Even in multithreaded, the interface remains locked during the compilation of shaders on these GPUs and it is possible that internally the driver already compiles in multithreaded.
Added subscriber: @elkoled-1
Added subscriber: @ArthurPholax
Can this be somehow related with issues in #77944 ?
In my case Blender 2.9 also crashes.
@Jeroen-Bakker I'm ok with removing this workaround only for intel HD6xx.
GG.depth_blitting_workaround = true;
GG.unused_fb_slot_workaround = true;
GG.texture_copy_workaround = true;
}
/* Special fix for theses specific GPUs.
if (GPU_type_matches(GPU_DEVICE_INTEL, GPU_OS_WIN, GPU_DRIVER_OFFICIAL) &&
(strstr(renderer, "HD Graphics 620") || strstr(renderer, "HD Graphics 630"))) {
GG.mip_render_workaround = true;
}
/* df/dy calculation factors, those are dependent on driver */
Any objection?
@fclem. we can remove it from 620/630, and temporarily remove it from the
--gpu-enable-workarounds
but still we need to fix the workaround for the other iGPUs.What a good solution, actually there are many of us who did not try the experience of version 2.90.0 again because of the fact that the application closes immediately when we do the steps mentioned above, all of you are making a very big effort and I congratulate you everyone at heart, I never regret having Blender. God bless you all.
This issue was referenced by
0f617cd67e
Added subscriber: @Mubinafa
Hello! I wanted to tell you that I am Juan Binafa (Binafa) and change the user Mubinafa, the fact is that I follow this thread, and I wanted to tell you that in this version "blender-2.90.0-afcb41a0aaaf-windows64" with graphics card "Intel (R) HD Graphics 620 updated "is working well on" fails to modify the properties of the material ", both in" EEVEE "which was where the problem occurred when starting the default application, until now this Alpha version" blender-2.90.0- afcb41a0aaaf-windows64 "works super well for problem" fails to modify material properties ". Thank you very much and it makes me very happy because you are working hard and you listen to us all when we see a problem in the software. Blessings.
Added subscriber: @Vaughn
Added subscribers: @hatinacat2000, @rjg
This issue was referenced by
f7d38e2e64
Changed status from 'Confirmed' to: 'Resolved'